--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -6,7 +6,7 @@ agent:
     os_image: ubuntu1804
   containers:
     - name: zephyr
-      image: semaphoreci/ubuntu
+      image: 'semaphoreci/ubuntu:18.04'
 blocks:
   - name: Docker-based example
     task:
