--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,15 +8,10 @@ agent:
     - name: zephyr
       image: 'semaphoreci/ubuntu:18.04'
 blocks:
-  - name: Docker-based example
+  - name: Hello
     task:
       jobs:
         - name: Hello
           commands:
-            - export
-            - echo KUMAR
-            - >-
-              printf "#include <stdio.h>\n int main() { printf(\"Hello world\");
-              return 0; }" > hello.c
-            - gcc hello.c -o hello
-            - ./hello
+            - ls
+            - pwd
