--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,12 +1,9 @@
 version: v1.0
-name: Hello Semaphore
+name: Test
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
-  containers:
-    - name: zephyr
-      image: 'semaphoreci/ubuntu:18.04'
 blocks:
   - name: Hello
     task:
