Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,5 +13,5 @@ blocks:
       jobs:
         - name: Hello
           commands:
-            - checkout
-            - ruby --version
+            - ls
+            - pwd
