--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -6,7 +6,7 @@ agent:
     os_image: ubuntu1804
   containers:
     - name: main
-      image: 'semaphoreci/ruby:2.6.1'
+      image: 'semaphoreci/ubuntu:18.04'
 blocks:
   - name: Hello
     task:
