what does checkout do?

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,9 +18,7 @@ blocks:
             - id
             - echo $ZEPHYR_SDK_INSTALL_DIR
             - export
-            - su - buildslave
-            - export
-            - exit
+            - checkout
       env_vars:
         - name: ZEPHYR_SDK_INSTALL_DIR
           value: /opt/sdk/zephyr-sdk-0.10.3
