--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,6 +19,7 @@ blocks:
             - id
             - echo $ZEPHYR_SDK_INSTALL_DIR
             - export
+            - touch KUMAR
       env_vars:
         - name: ZEPHYR_SDK_INSTALL_DIR
           value: /opt/sdk/zephyr-sdk-0.10.3
