build hello wold frdm_k64f

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,23 +13,14 @@ blocks:
       jobs:
         - name: Hello
           commands:
-            - checkout
-            - ls
-            - pwd
-            - id
-            - echo $ZEPHYR_SDK_INSTALL_DIR
-            - export
-            - touch KUMAR
+            - apt-get install lftp
+            - checkout --use-cache
+            - source zephyr-env.sh
+            - west init
+            - west update
+            - scripts/sanitycheck -T samples/hello_world/ -p frdm_k64f
       env_vars:
         - name: ZEPHYR_SDK_INSTALL_DIR
           value: /opt/sdk/zephyr-sdk-0.10.3
         - name: ZEPHYR_TOOLCHAIN_VARIANT
           value: zephyr
-  - name: 'Block #2'
-    task:
-      jobs:
-        - name: 'Job #1'
-          commands:
-            - ls
-            - ls /
-            - export
