--- a/.shippable.yml
+++ b/.shippable.yml
@@ -7,6 +7,7 @@ env:
         - ZEPHYR_SDK_INSTALL_DIR=/opt/sdk/zephyr-sdk-0.10.3
         - ZEPHYR_TOOLCHAIN_VARIANT=zephyr
         - MATRIX_BUILDS="5"
+        - SCCACHE_BUCKET="builds.zephyrproject.org"
     matrix:
         - MATRIX_BUILD="1"
         - MATRIX_BUILD="2"
