--- a/.shippable.yml
+++ b/.shippable.yml
@@ -27,6 +27,7 @@ build:
 
     ci:
       - export CCACHE_DIR=${SHIPPABLE_BUILD_DIR}/ccache/.ccache
+      - aws s3 ls
       - sccache -s
       - >
         if [ "$IS_PULL_REQUEST" = "true" ]; then
