--- a/drivers/modem/Kconfig
+++ b/drivers/modem/Kconfig
@@ -158,7 +158,7 @@ config MODEM_SOCKET
 	  Note that the modem socket uses runtime allocated file descriptors
 	  reserved from the fdtable, for which the max count is set using the
 	  Kconfig option ZVFS_OPEN_MAX. Make sure to update this value as both
-	  the modem sockets and the POSIX_API, if used, share them.
+	  the modem sockets and other POSIX APIs, if used, share them.
 
 config MODEM_SOCKET_PACKET_COUNT
 	int "Maximum number of stored packet sizes per socket"
