--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -7,9 +7,13 @@
 
 config WIFI_NM_WPA_SUPPLICANT
 	bool "WPA Suplicant from hostap project [EXPERIMENTAL]"
-	select POSIX_TIMERS
-	select POSIX_SIGNALS
-	select POSIX_API
+	select POSIX_SYSTEM_INTERFACES
+	select POSIX_BASE_DEFINITIONS
+	select POSIX_AEP_REALTIME_MINIMAL
+	select POSIX_NETWORKING
+	imply EVENTFD
+	imply POSIX_FD_MGMT
+	imply POSIX_MULTI_PROCESS
 	select XSI_SINGLE_PROCESS
 	select NET_SOCKETS
 	select NET_SOCKETS_PACKET
