MAINTAINERS file: add description for tests
Add a brief description for the `tests` key used in areas.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -32,6 +32,9 @@
 #     labels:
 #         List of GitHub labels to add to pull requests that modify the area.
 #
+#     tests:
+#         List of test identifiers to be run when this area is affected by a PR.
+#
 #     files:
 #         List of paths and/or glob patterns giving the files in the area,
 #         relative to the root directory.
