--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -957,6 +957,7 @@ Continuous Integration:
   maintainers:
     - stephanosio
     - nashif
+    - foobar
   collaborators:
     - fabiobaltieri
     - kartben
