--- a/.github/workflows/assigner.yml
+++ b/.github/workflows/assigner.yml
@@ -66,7 +66,7 @@ jobs:
           if [ "${{ github.base_ref }}" != "main" ]; then
             FLAGS+=" -P ${{ github.event.pull_request.number }} --updated-manifest pr_west.yml --updated-maintainer-file pr_MAINTAINERS.yml"
           else
-            FLAGS+=" -P ${{ github.event.pull_request.number }}
+            FLAGS+=" -P ${{ github.event.pull_request.number }}"
           fi
         elif [ "${{ github.event_name }}" = "issues" ]; then
           FLAGS+=" -I ${{ github.event.issue.number }}"
